tests/ui/parser/raw/raw-byte-string-literals-2.rs
pub fn main() {
    br##~"a"~##;  //~ ERROR only `#` is allowed in raw string delimitation
}
